Improve JDT.LS startup with Maven/Gradle
Signed-off-by: azerr <azerr@redhat.com>